# Campus-Shield

./: .codex-task-gate.md  .gitignore  README.md  pyproject.toml  requirements.txt  start_game.bat  start_game.command  start_godot.bat  start_godot.command
assets/ui/: README.md
campus_safe_game/: __init__.py
data/: actors.json  interactions.json  npcs.json  terms.json
data/hf/: robot_coach_sft.jsonl  route_advisor_train.jsonl
data/localization/: en-US.json  zh-CN.json
data/maps/: campus_demo.tmx  index.json
data/scenarios/: main_scenario.json
docs/: DEVELOPMENT_RULES.md  GODOT_REBUILD_PLAN.md  HF_MODELING.md  TOOLCHAIN_SETUP.md
godot/: README.md  export_presets.cfg  project.godot
godot/data/levels/: chapter_01.json  chapter_01.tmx
godot/scenes/: Main.tscn
godot/scripts/: GameRoot.gd  LevelLoader.gd  ScenarioState.gd  campus_shield.gd
godot/scripts/entities/: Interactable.gd  Level.gd  Player.gd  Raider.gd  Robot.gd
godot/scripts/ui/: MapGuide.gd  UIRouter.gd
godot/tools/: ai_behavior_check.gd  ui_layout_check.gd
src/campus_safe_game/: __init__.py  advisor.py  game.py  layout.py  loader.py  localization.py  main.py  models.py  persistence.py  rules.py  ui_theme.py
tests/: test_advisor.py  test_content.py  test_game_cache.py  test_godot_level_data.py  test_hotfix_phase0.py  test_layout.py  test_persistence.py  test_rules.py  test_ui_theme.py
tools/: check_godot_rebuild.sh  export_tiled_level.py  hf_train_robot_coach.py  hf_train_route_advisor.py  render_ui_snapshots.py
